2007-09-18  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scan.in:
	  Handle function pointers. Fixes #477532.

2007-09-18  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-scan.in:
	  Parse reoccuring const. Fixes #471014.

	* tests/bugs/docs/Makefile.am:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c:
	* tests/bugs/src/tester.h:
	* tests/gobject/docs/Makefile.am:
	* tests/gobject/src/tester.c:
	* tests/gobject/src/tester.h:
	  Add more tests and cleanup the test-code a little.

2007-09-17  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Revert some Makefile improvements, as we can't control the quoting
	  reliably.

2007-09-11  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Default master doc should have proper extension. Fixes #467773.

2007-09-11  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Makefile improvements.

2007-09-03  Stefan Kost  <ensonic@users.sf.net>

	* MAINTAINERS:
	  Update MAINTAINER to adhere to rules given on
	  http://live.gnome.org/MaintainersCorner#maintainers

2007-08-23  Benjamin Otte  <otte@gnome.org>

	* gtkdoc-mktmpl.in:
	  sync with gtkdoc-mkdb completely. Really fixes #419997

2007-08-21  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* style.css:
	  Add divider and empty space at the bottom. Mostly fixes #448879.

2007-08-21  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Make use of rebase if possible. Fixes #465920

	* gtkdoc-rebase.in:
	  Rebase improvements and fixes.	  

2007-08-16  Stefan Kost  <ensonic@users.sf.net>

	* .cvsignore:
	* help/.cvsignore:
	* help/manual/.cvsignore:
	* help/manual/C/.cvsignore:
	  Get rid of cvsignore files.

2007-08-14  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-common.pl.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.h: