@@ -1,3 +1,8 @@
+2007-09-20  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-fixxref.in:
+	  Revert online option for fixxref now that we have a rebase command.
+
 2007-09-18  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtkdoc-scan.in:
